--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "frontMatter.framework.startCommand": "cd demo; hugo server -D"
+    "frontMatter.framework.startCommand": "cd demo; hugo server -D",
+    "html.format.enable": false
 }
