--- a/demo/config/_default/config.yaml
+++ b/demo/config/_default/config.yaml
@@ -10,7 +10,7 @@ baseURL: "https://example.com/" # Website URL
 ## LANGUAGE
 ############################
 
-defaultContentLanguage: en
+defaultContentLanguage: it
 hasCJKLanguage: false
 defaultContentLanguageInSubdir: false
 removePathAccents: true
