--- a/sportschemy/config.yaml
+++ b/sportschemy/config.yaml
@@ -4,3 +4,6 @@ module:
       target: archetypes
     - source: layouts
       target: layouts
+    - source: assets/scss/blocks
+      target: assets/scss/blocks
+      includeFiles: '**.scss'
