--- a/demo/config/_default/config.yaml
+++ b/demo/config/_default/config.yaml
@@ -24,7 +24,7 @@ module:
     - path: github.com/wowchemy/wowchemy-hugo-themes/modules/wowchemy-plugin-netlify-cms
     - path: github.com/wowchemy/wowchemy-hugo-themes/modules/wowchemy-plugin-netlify
     - path: github.com/wowchemy/wowchemy-hugo-themes/modules/wowchemy/v5
-    - path: ../../sportschemy
+    - path: ../../sportchemy
 
 ############################
 ## ADVANCED
