--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -22,13 +22,11 @@ jobs:
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
         with:
-          hugo-version: 'latest'
+          hugo-version: '0.108.0'
           extended: true
 
-      - run: cd demo
-
       - name: Build
-        run: hugo --minify
+        run: cd demo && hugo -gc --minify
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
@@ -38,4 +36,4 @@ jobs:
         if: ${{ github.ref == 'refs/heads/main' }}
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./public
+          publish_dir: ./demo/public
