--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -26,7 +26,7 @@ jobs:
           extended: true
 
       - name: Build
-        run: cd demo && hugo -gc --minify
+        run: cd demo && hugo --gc --minify
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
