add card column size for medium device

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "frontMatter.framework.startCommand": "cd demo; hugo server -D",
+    "frontMatter.framework.startCommand": "cd demo && hugo server -D",
     "editor.formatOnSave": false
 }
