--- a/demo/config/_default/config.yaml
+++ b/demo/config/_default/config.yaml
@@ -3,7 +3,7 @@
 # Hugo Documentation: https://gohugo.io/getting-started/configuration/#all-configuration-settings
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
-title: Sportschemy # Website name
+title: Sportchemy # Website name
 baseURL: "https://agos95.github.io/sportchemy" # Website URL
 
 ############################
