--- a/demo/config/_default/config.yaml
+++ b/demo/config/_default/config.yaml
@@ -10,7 +10,7 @@ baseURL: "https://agos95.github.io/sportchemy" # Website URL
 ## LANGUAGE
 ############################
 
-defaultContentLanguage: it
+defaultContentLanguage: en
 hasCJKLanguage: false
 defaultContentLanguageInSubdir: false
 removePathAccents: true
