--- a/sportchemy/config.yaml
+++ b/sportchemy/config.yaml
@@ -1,5 +1,7 @@
 module:
   mounts:
+    - source: i18n
+      target: i18n
     - source: archetypes
       target: archetypes
     - source: layouts
