--- a/demo/config/_default/languages.yaml
+++ b/demo/config/_default/languages.yaml
@@ -3,8 +3,8 @@
 #   Documentation: https://wowchemy.com/docs/guide/language/
 
 # Default language
-it:
-  languageCode: it-it
+en:
+  languageCode: en-us
   # Uncomment for multi-lingual sites, and move English content into `en` sub-folder.
   #contentDir: content/en
 
