fix datetime in importer

--- a/demo/config/_default/config.yaml
+++ b/demo/config/_default/config.yaml
@@ -14,6 +14,7 @@ defaultContentLanguage: en
 hasCJKLanguage: false
 defaultContentLanguageInSubdir: false
 removePathAccents: true
+timeZone: Europe/Rome
 
 ############################
 ## MODULES
