--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "frontMatter.framework.startCommand": "cd demo && hugo server -D",
-    "editor.formatOnSave": true,
+    "editor.formatOnSave": false,
     "[html]": {
         "editor.formatOnSave": false
     },
