--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -22,11 +22,11 @@ jobs:
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
         with:
-          hugo-version: '0.108.0'
+          hugo-version: '0.110.0'
           extended: true
 
       - name: Build
-        run: cd demo && hugo --gc --minify
+        run: cd docs && hugo --gc --minify
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
@@ -36,4 +36,4 @@ jobs:
         if: ${{ github.ref == 'refs/heads/main' }}
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./demo/public
+          publish_dir: ./docs/public
