add NBA examples

--- a/docs/data/sportchemy/team_logo.yaml
+++ b/docs/data/sportchemy/team_logo.yaml
@@ -1,1 +1,19 @@
-Pallacanestro Arcella: "https://www.playbasket.it/images/club/logo_016113_U.S.Arcella.png"
+Atlanta Hawks: https://content.sportslogos.net/logos/6/220/full/8190_atlanta_hawks-primary-2021.png
+Boston Celtics: https://content.sportslogos.net/logos/6/213/full/boston_celtics_logo_primary_19977628.png
+Charlotte Hornets: https://content.sportslogos.net/logos/6/5120/full/1926_charlotte__hornets_-primary-2015.png
+Chicago Bulls: https://content.sportslogos.net/logos/6/221/full/chicago_bulls_logo_primary_19672598.png
+Dallas Mavericks: https://content.sportslogos.net/logos/6/228/full/3463_dallas_mavericks-primary-2018.png
+Denver Nuggets: https://content.sportslogos.net/logos/6/229/full/8926_denver_nuggets-primary-2019.png
+Golden State Warriors: https://content.sportslogos.net/logos/6/235/full/3152_golden_state_warriors-primary-2020.png
+Houston Rockets: https://content.sportslogos.net/logos/6/230/full/6830_houston_rockets-primary-2020.png
+Indiana Pacers: https://content.sportslogos.net/logos/6/224/full/4812_indiana_pacers-primary-2018.png
+Los Angeles Lakers: https://content.sportslogos.net/logos/6/237/full/uig7aiht8jnpl1szbi57zzlsh.png
+Miami Heat: https://content.sportslogos.net/logos/6/214/full/burm5gh2wvjti3xhei5h16k8e.gif
+Milwaukee Bucks: NBA/milwaukee_bucks_logo_primary_20165763.png
+New Orleans Pelicans: NBA/2681_new_orleans_pelicans-primary-2014.png
+Orlando Magic: NBA/orlando_magic_logo_primary_20117178.png
+Philadelphia 76ers: NBA/7034_philadelphia_76ers-primary-2016.png
+Phoenix Suns: NBA/phoenix_suns_logo_primary_20143696.png
+San Antonio Spurs: NBA/2547_san_antonio_spurs-primary-2018.png
+Toronto Raptors: NBA/7024_toronto_raptors-primary-2021.png
+Utah Jazz: NBA/utah_jazz_logo_primary_2023_sportslogosnet-8513.png
