--- a/docs/config/_default/params.yaml
+++ b/docs/config/_default/params.yaml
@@ -61,8 +61,8 @@ locale:
 
 features:
   syntax_highlighter:
-    theme_light: github-light
-    theme_dark: dracula
+    theme_light: monokai
+    theme_dark: monokai
   math:
     enable: false
   privacy_pack:
